# Control

./: .env.prod  .gitignore  AI_ASSISTANT_DOCS.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml
backend/services/ai-service/: Dockerfile  pyproject.toml
backend/services/ai-service/app/: main.py
backend/services/ai-service/app/api/agent/: http_client.py  prompts.py  pulse.py  router.py  schemas.py  service.py  tool_executor.py  tools.py
backend/services/ai-service/app/api/chat/: formatter.py  qdrant_store.py  router.py  schemas.py  semantic_schema.py  service.py
backend/services/ai-service/app/api/dashboard/: router.py
backend/services/ai-service/app/workers/: celery_app.py
backend/services/ai-service/app/workers/tasks/: calculate_metrics.py  daily_digest.py  intelligence.py  store_chat_example.py
backend/services/finance-service/: Dockerfile  pyproject.toml
backend/services/finance-service/app/: main.py
backend/services/finance-service/app/api/accounting/: router.py  service.py
backend/services/finance-service/app/api/accounts/: router.py  schemas.py  service.py
backend/services/finance-service/app/api/admin/: gpu.py  router.py  schemas.py  service.py
backend/services/finance-service/app/api/auth/: router.py  schemas.py  service.py
backend/services/finance-service/app/api/budget/: router.py  schemas.py  service.py
backend/services/finance-service/app/api/controlling/: router.py  (+1 more)
backend/services/finance-service/app/workers/: celery_app.py
backend/services/invoice-pipeline/: Dockerfile  pyproject.toml
backend/services/invoice-pipeline/app/: main.py
backend/services/invoice-pipeline/app/workers/: celery_app.py
backend/services/nav-service/: Dockerfile  pyproject.toml
backend/services/nav-service/app/: config.py  database.py  dependencies.py  exceptions.py  main.py
backend/services/nav-service/app/models/: __init__.py  invoice.py  nav_transaction.py  partner.py  user.py
backend/services/nav-service/app/nav_client/: client.py  crypto.py  exceptions.py  mock_client.py  xml_builder.py  xml_parser.py
backend/services/nav-service/app/utils/: security.py
backend/services/nav-service/app/workers/: celery_app.py
(+312 files in other folders)
