[project]
name = "finance-service"
version = "0.1.0"
description = "Finance Service - Auth, Budget, PO, Accounting, Controlling, Dashboard, Reports, Admin, Scenarios"
requires-python = ">=3.11"
dependencies = [
    "invoice-manager-common",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "redis>=5.0.0",
    "structlog>=24.1.0",
    "python-multipart>=0.0.6",
    "alembic>=1.13.0",
    "boto3>=1.34.0",
    "httpx>=0.26.0",
    "celery[redis]>=5.3.0",
]
