[project]
name = "invoice-pipeline"
version = "0.1.0"
description = "Invoice Pipeline - Upload, OCR, Extraction, Approval, Matching"
requires-python = ">=3.11"
dependencies = [
    "invoice-manager-common",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",
    "httpx>=0.26.0",
    "structlog>=24.1.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
    "pillow>=10.0.0",
    "pdf2image>=1.16.3",
]
